fix content overlap problem and disable header text selection

--- a/Styles/content.css
+++ b/Styles/content.css
@@ -8,7 +8,7 @@
   top: 4.0625rem; bottom: 0;
   left: 0; right: 0;
   
-  pointer-events: none;
+  /*pointer-events: none;*/
   z-index: 1;
 }
 
