--- a/Styles/sidebar.css
+++ b/Styles/sidebar.css
@@ -32,6 +32,8 @@
   border-style: solid;
   border-color: white;
   border-right-color: rgb(120, 120, 120);
+  
+  background-color: white;
 }
 
 /* Sidebar Option Container Styles */
